<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_view"
    android:orientation="horizontal"
    android:visibility="gone" >

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_peer_button" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_peer_button" />

    <Button
        android:id="@+id/btn_start_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_activity"
        android:visibility="gone" />

    <TextView
        android:id="@+id/device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/group_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/group_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>