<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Self information -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:padding="10dip">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/black"
            android:src="@drawable/machine" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/my_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
        		android:textStyle="bold"
                android:gravity="center_vertical" />
            <TextView
                android:id="@+id/my_status"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="16sp"
        		android:textStyle="bold"
                android:ellipsize="marquee" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:text="@string/label_peers" />

    <!-- Available peers -->
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"/>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@@android:color/background_light"
        android:text="@string/empty_message" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:text="@string/label_deck" />
    
    <ListView
        android:id="@+id/mylist"
        android:layout_width="fill_parent"
        android:background="@android:color/background_light"
        android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:listSelector="@android:color/darker_gray"
        android:drawSelectorOnTop="false"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="19sp"
        android:background="@android:color/black"
        android:textColor="@android:color/background_light">
        	<SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        	
   	</LinearLayout>>
    
   	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="19sp"
        android:background="@android:color/black"
        android:textColor="@android:color/background_light">

     	    <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/black"
            android:src="@drawable/ic_action_previous" />
        	 <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/black"
            android:src="@drawable/ic_action_pause" />
        	 <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/black"
            android:src="@drawable/ic_action_next" />
   	</LinearLayout>
</LinearLayout>
